kodex-rs/tui/src/chatwidget/tests/snapshots/kodex_tui__chatwidget__tests__slash_commands__transcript_copy_success.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 80)"
---
› Ask Kodex to do anything

  Copied selection to clipboard
